--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .about {
   min-height: calc(100vh - 18rem);
   padding: 4rem 0;
@@ -14,6 +21,8 @@
 .text a {
   color: var(--clr-red-dark);
   margin-left: 0.4rem;
+  -webkit-transition: var(--mainTransition);
+  -o-transition: var(--mainTransition);
   transition: var(--mainTransition);
 }
 .text a:hover {
@@ -32,6 +41,8 @@
 .contact a {
   letter-spacing: var(--spacing);
   color: var(--clr-primary);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
   font-weight: 700;
   padding: 0.375rem 0rem;
