--- a/src/css/error.module.css
+++ b/src/css/error.module.css
@@ -1,7 +1,13 @@
 .error {
   min-height: calc(100vh - (5rem + 12.6rem));
   background: var(--primaryColor);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
