--- a/src/css/input.module.css
+++ b/src/css/input.module.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .form {
   margin-bottom: 4rem;
   color: var(--clr-grey-5);
@@ -18,6 +25,7 @@
   border: transparent;
   letter-spacing: var(--spacing);
   color: var(--lightGrey);
+  -webkit-box-shadow: 0 1px 3px hsl(0, 0%, 0%, 0.1);
   box-shadow: 0 1px 3px hsl(0, 0%, 0%, 0.1);
   border-radius: var(--radius);
 }
