--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
 :root {
   --clr-primary: hsl(205, 67%, 45%);
@@ -38,6 +45,7 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 body {
@@ -117,6 +125,8 @@ ul {
   padding: 0.375rem 0.75rem;
   border-radius: var(--radius);
   display: inline-block;
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
   font-size: 1rem;
@@ -148,8 +158,14 @@ ul {
   background-position: center;
   background-size: cover;
   opacity: 1 !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background-color: rgba(34, 34, 34, 0.6);
 }
@@ -182,6 +198,7 @@ ul {
   width: 90vw;
   max-width: 1170px;
   margin: 0 auto 2rem auto;
+  display: -ms-grid;
   display: grid;
   gap: 3rem 1.5rem;
   grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
@@ -207,17 +224,24 @@ ul {
 .tutorial {
   border-radius: var(--radius);
   background: var(--clr-white);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   height: 100%;
 }
 .tutorial:hover {
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  -webkit-transform: scale(1.02);
+  -ms-transform: scale(1.02);
   transform: scale(1.02);
 }
 .tutorial img {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .tutorial-footer {
@@ -246,7 +270,11 @@ ul {
 }
 
 .links-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
 
   margin-top: 1rem;
@@ -259,5 +287,7 @@ ul {
   background: var(--clr-primary-9);
   padding: 0.25rem 0.5rem;
   border-radius: var(--radius);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
 }
