--- a/src/css/sidebar.module.css
+++ b/src/css/sidebar.module.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -7,16 +14,24 @@
   background: var(--clr-grey-10);
   z-index: 2;
   opacity: 1;
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
 }
 .closeSidebar {
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
   transform: translateX(-100%);
   opacity: 0;
   z-index: 0;
 }
 .header {
   padding: 2rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
 }
 .movingHeader {
@@ -28,8 +43,14 @@
   display: inline-block;
   text-transform: capitalize;
   font-size: 1.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
   color: var(--clr-red-dark);
@@ -46,8 +67,14 @@
 .linksContainer {
   margin-top: -4.875rem;
   min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 .link {
@@ -58,6 +85,8 @@
   margin: 0.5rem 0;
   text-align: center;
   letter-spacing: var(--spacing);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
   color: var(--clr-grey-5);
   border-radius: var(--radius);
