--- a/src/css/single-project.module.css
+++ b/src/css/single-project.module.css
@@ -1,22 +1,40 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .project {
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
   background: var(--clr-white);
   border-radius: var(--radius);
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: auto 1fr;
   grid-template-rows: auto 1fr;
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 .project:hover {
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  -webkit-transform: scale(1.02);
+  -ms-transform: scale(1.02);
   transform: scale(1.02);
 }
 .project img {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .footer {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: auto auto 1fr auto;
   grid-template-rows: auto auto 1fr auto;
 }
 
@@ -27,7 +45,11 @@
   display: block;
   margin: 0 auto;
   border: 0.5rem solid var(--clr-white);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   background: var(--clr-primary-9);
   color: var(--clr-primary-5);
@@ -64,8 +86,14 @@
 }
 
 .github {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background: var(--clr-primary-10);
   padding: 0.75rem 1rem;
@@ -75,6 +103,8 @@
 .github a {
   text-transform: capitalize;
   color: var(--clr-primary);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
   transition: var(--transition);
   display: inline-block;
   padding: 0.25rem 0;
